tests/src/frontend/visibility/invalid/mismatched_constructor_3.sk
base class Foo(x: Int)
class Bar protected (y: Int) extends Foo
